# acoustic_resonators

./: .gitignore  Makefile  README.md  data_download.py  pyproject.toml
src/experiment/: pyproject.toml
src/experiment/acoustic_resonators/: __init__.py  config.py
src/experiment/acoustic_resonators/asops/: analysis.ipynb  asops.py  config.py  data_processing.py  filenames.txt  summary.pptx
src/experiment/acoustic_resonators/asops/afm/550 fast cooldown/: FM308_550C_fast0000.ibw
src/experiment/acoustic_resonators/asops/afm/550 slow cooldown/: FM308_10um_rms.csv  FM308_550C_FC_spot1.ibw  FM308_550C_FC_spot10.ibw  FM308_550C_FC_spot11.ibw  FM308_550C_FC_spot12.ibw  ForceMap01.ARDF  (+23 more)
src/experiment/acoustic_resonators/asops/processed_data/: average_models.csv  fit_results.csv  xrd_FM308.csv
src/experiment/acoustic_resonators/stroboscopy/: config.py  stroboscopy.py
src/experiment/acoustic_resonators/stroboscopy/file_lists/: sample_comparison.csv  xTxM.csv
src/experiment/acoustic_resonators/stroboscopy/misc/: beam_size.ipynb  superlattice_calculations.ipynb  workbook.ipynb
src/experiment/acoustic_resonators/stroboscopy/processed_data/: wavelength_comparison.csv  xP_VIS.csv  xP_VIS_fit.csv
src/experiment/acoustic_resonators/theory/: py_twotemp_model.ipynb  thermoreflectance.ipynb
src/experiment/acoustic_resonators/theory/figures/: anharmonicity.afdesign
src/experiment/acoustic_resonators/theory/literature_data/: index_imag.csv  index_real.csv  temperature_coeff_imag.csv
src/experiment/acoustic_resonators/xrays/: config.py  xrays.ipynb  xrd_temperature.py
(+96 files in other folders)
